---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/debug_list_map_linear.hvm
---
(Map Inc (List.cons 1 (List.cons 41 (List.cons 255 (List.cons 90 List.nil)))))
---------------------------------------
(Map Inc (List.cons 1 (List.cons 41 (List.cons 255 #List λa #List λ* #List (a 90 List.nil)))))
---------------------------------------
(Map Inc (List.cons 1 (List.cons 41 #List λa #List λ* #List (a 255 #List λb #List λ* #List (b 90 List.nil)))))
---------------------------------------
(Map Inc (List.cons 1 #List λa #List λ* #List (a 41 #List λb #List λ* #List (b 255 #List λc #List λ* #List (c 90 List.nil)))))
---------------------------------------
(Map Inc #List λa #List λ* #List (a 1 #List λb #List λ* #List (b 41 #List λc #List λ* #List (c 255 #List λd #List λ* #List (d 90 List.nil)))))
---------------------------------------
(#List (#List λa #List λb λc let {d e} = c; (List.cons (d a) (Map e b)) 1 #List λf #List λ* #List (f 41 #List λg #List λ* #List (g 255 #List λh #List λ* #List (h 90 List.nil)))) Inc)
---------------------------------------
(List.cons (Inc 1) (Map Inc #List λa #List λ* #List (a 41 #List λb #List λ* #List (b 255 #List λc #List λ* #List (c 90 List.nil)))))
---------------------------------------
(List.cons (Inc 1) (#List (#List λa #List λb λc let {d e} = c; (List.cons (d a) (Map e b)) 41 #List λf #List λ* #List (f 255 #List λg #List λ* #List (g 90 List.nil))) Inc))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (Map Inc #List λa #List λ* #List (a 255 #List λb #List λ* #List (b 90 List.nil)))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (#List (#List λa #List λb λc let {d e} = c; (List.cons (d a) (Map e b)) 255 #List λf #List λ* #List (f 90 List.nil)) Inc)))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) (Map Inc #List λa #List λ* #List (a 90 List.nil)))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) (#List (#List λa #List λb λc let {d e} = c; (List.cons (d a) (Map e b)) 90 List.nil) Inc))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) (List.cons (Inc 90) (Map Inc List.nil)))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) (List.cons (Inc 90) (#List (List.nil #List λa #List λb λc let {d e} = c; (List.cons (d a) (Map e b)) λ* List.nil) Inc)))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) (List.cons (Inc 90) (λ* List.nil Inc)))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) (List.cons (Inc 90) List.nil))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) #List λa #List λ* #List (a (Inc 90) List.nil))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) (List.cons (Inc 255) #List λa #List λ* #List (a 91 List.nil))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) #List λa #List λ* #List (a (Inc 255) #List λb #List λ* #List (b 91 List.nil))))
---------------------------------------
(List.cons (Inc 1) (List.cons (Inc 41) #List λa #List λ* #List (a 256 #List λb #List λ* #List (b 91 List.nil))))
---------------------------------------
(List.cons (Inc 1) #List λa #List λ* #List (a (Inc 41) #List λb #List λ* #List (b 256 #List λc #List λ* #List (c 91 List.nil))))
---------------------------------------
(List.cons (Inc 1) #List λa #List λ* #List (a 42 #List λb #List λ* #List (b 256 #List λc #List λ* #List (c 91 List.nil))))
---------------------------------------
#List λa #List λ* #List (a (Inc 1) #List λb #List λ* #List (b 42 #List λc #List λ* #List (c 256 #List λd #List λ* #List (d 91 List.nil))))
---------------------------------------
[2, 42, 256, 91]
